--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+v21.1.0.5:
+    - 
+
+v21.1.0.4:
+    - Improved UI scaling
+    - Added 3 new lua functions (Check DOC.MD for usage):
+        - ReloadPlayersManager
+        - PlayerHasDevelopementPlan
+        - PlayerSetValueInDevelopementPlan
+
 v21.1.0.3:
     - Editing player in Career Mode will also update the xp stored in Developement Plans (means attributes won't revert at Monday)
 
