--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -28,6 +28,7 @@
     "Console": "Console",
     "DB_Editor": "Database Editor",
     "LUA_Engine": "LUA Engine",
+    "File_Browser": "File Browser",
     "players_editor": "Players Editor",
     "unknown_1": "Unknown (1)",
     "unknown_2": "Unknown (2)",
