--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+v21.1.0.8:
+    - Added to Players Editor:
+        - Jersey number
+        - Wage
+        - Squad Role
+        - Performance Bonus
+        - Loan Wage Split
+
 v21.1.0.7:
     - New Launcher icon
     - Added 4 new lua functions (Check DOC.MD for usage):
