--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -69,9 +69,13 @@
     "traditional": "Traditional",
     "acrobatic": "Acrobatic",
     "age": "Age",
+    "age_desc": "Player Age",
     "birthday": "Birth Day",
     "birthmonth": "Birth Month",
     "birthyear": "Birth Year",
+    "join_team_day": "Join Team Day",
+    "join_team_month": "Join Team Month",
+    "join_team_year": "Join Team Year",
     "skillmoves": "Skill Moves",
     "skillmoveslikelihood": "Skill Moves Likelihood",
     "internationalrep": "International Reputation",
