--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -58,6 +58,9 @@
     "left": "Left",
     "male": "Male",
     "female": "Female",
+    "appearances": "Appearances",
+    "clean_sheets": "Clean Sheets",
+    "goals_scored": "Goals Scored",
     "low": "Low",
     "medium": "Medium",
     "high": "High",
@@ -242,6 +245,14 @@
     "gk_comes_for_crosses": "GK Comes for Crosses",
     "gk_saves_with_feet": "GK Saves with Feet",
     "set_play_specialist": "Set Play Specialist",
+    "jerseynumber": "Jersey Number",
+    "wage": "Wage",
+    "playerrole": "Squad Role",
+    "loan_wage_split": "Loan Wage Split",
+    "performancebonustype": "Performance Bonus Type",
+    "performancebonusvalue": "Performance Bonus Value",
+    "performancebonuscount": "Performance Bonus Count",
+    "performancebonuscountachieved": "Performance Bonus Count Achieved",
     "skillmoves_desc": "Skill Moves",
     "skillmoveslikelihood_desc": "Skill Moves Likelihood",
     "internationalrep_desc": "International Reputation",
@@ -363,6 +374,14 @@
     "preferredposition2_desc": "Preferred Position 2",
     "preferredposition3_desc": "Preferred Position 3",
     "preferredposition4_desc": "Preferred Position 4",
+    "jerseynumber_desc": "Club Team Jersey Number",
+    "wage_desc": "Weekly Wage",
+    "playerrole_desc": "Squad Role",
+    "loan_wage_split_desc": "Loan Wage Split",
+    "performancebonustype_desc": "Performance Bonus Type",
+    "performancebonusvalue_desc": "Performance Bonus Value",
+    "performancebonuscount_desc": "Performance Bonus Count",
+    "performancebonuscountachieved_desc": "Performance Bonus Count Achieved",
     "potential_abbr": "Potential",
     "modifier_abbr": "Modifier",
     "skillmoves_abbr": "Skill Moves",
@@ -484,6 +503,14 @@
     "preferredposition2_abbr": "Pref. Pos. 2",
     "preferredposition3_abbr": "Pref. Pos. 3",
     "preferredposition4_abbr": "Pref. Pos. 4",
+    "jerseynumber_abbr": "Jersey Num.",
+    "wage_abbr": "Wage",
+    "playerrole_abbr": "Role",
+    "loan_wage_split_abbr": "Loan Wage Split",
+    "performancebonustype_abbr": "Bonus Type",
+    "performancebonusvalue_abbr": "Bonus Value",
+    "performancebonuscount_abbr": "Bonus Count",
+    "performancebonuscountachieved_abbr": "Bonus Count Achieved",
     "NONE": "NONE",
     "GK": "GK",
     "SW": "SW",
