--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -253,6 +253,16 @@
     "performancebonusvalue": "Performance Bonus Value",
     "performancebonuscount": "Performance Bonus Count",
     "performancebonuscountachieved": "Performance Bonus Count Achieved",
+    "release_clause": "Release Clause",
+    "fm_fitness": "Fitness",
+    "fm_isinjured": "Is Injured?",
+    "fm_injurytype": "Injury",
+    "fm_fullfit_y": "Full fit on year",
+    "fm_fullfit_m": "Full fit on month",
+    "fm_fullfit_d": "Full fit on day",
+    "sharpness": "Sharpness",
+    "match_form": "Form",
+    "morale": "Morale",
     "skillmoves_desc": "Skill Moves",
     "skillmoveslikelihood_desc": "Skill Moves Likelihood",
     "internationalrep_desc": "International Reputation",
@@ -375,13 +385,23 @@
     "preferredposition3_desc": "Preferred Position 3",
     "preferredposition4_desc": "Preferred Position 4",
     "jerseynumber_desc": "Club Team Jersey Number",
-    "wage_desc": "Weekly Wage",
+    "wage_desc": "Weekly Wage\n\nIn Euro, regardless your in-game currency ",
     "playerrole_desc": "Squad Role",
     "loan_wage_split_desc": "Loan Wage Split",
     "performancebonustype_desc": "Performance Bonus Type",
     "performancebonusvalue_desc": "Performance Bonus Value",
     "performancebonuscount_desc": "Performance Bonus Count",
     "performancebonuscountachieved_desc": "Performance Bonus Count Achieved",
+    "release_clause_desc": "Player Release Clause.\n\n0 = No clause",
+    "fm_fitness_desc": "Player match fitness/durability. Call it as you want.\n\nBasically, it's the stamina bar that you see in bottom left/right corner in game",
+    "fm_isinjured_desc": "Player Is Injured?",
+    "fm_injurytype_desc": "Player Injury Name",
+    "fm_fullfit_y_desc": "Date when player will be full fit after injury",
+    "fm_fullfit_m_desc": "Date when player will be full fit after injury",
+    "fm_fullfit_d_desc": "Date when player will be full fit after injury",
+    "sharpness_desc": "Player Match Sharpness",
+    "match_form_desc": "Player Match Form",
+    "morale_desc": "Player Morale",
     "potential_abbr": "Potential",
     "modifier_abbr": "Modifier",
     "skillmoves_abbr": "Skill Moves",
@@ -511,6 +531,26 @@
     "performancebonusvalue_abbr": "Bonus Value",
     "performancebonuscount_abbr": "Bonus Count",
     "performancebonuscountachieved_abbr": "Bonus Count Achieved",
+    "release_clause_abbr": "Release Clause",
+    "fm_fitness_abbr": "Fitness",
+    "fm_isinjured_abbr": "Is Injured?",
+    "fm_injurytype_abbr": "Injury",
+    "fm_fullfit_y_abbr": "Full fit year",
+    "fm_fullfit_m_abbr": "Full fit month",
+    "fm_fullfit_d_abbr": "Full fit day",
+    "sharpness_abbr": "Sharpness",
+    "match_form_abbr": "Form",
+    "morale_abbr": "Morale",
+    "morale_very_unhappy": "Very Unhappy",
+    "morale_unhappy": "Unhappy",
+    "morale_content": "Content",
+    "morale_happy": "Happy",
+    "morale_very_happy": "Very Happy",
+    "form_bad": "Bad",
+    "form_poor": "Poor",
+    "form_okay": "Okay",
+    "form_good": "Good",
+    "form_excellent": "Excellent",
     "NONE": "NONE",
     "GK": "GK",
     "SW": "SW",
@@ -540,6 +580,107 @@
     "ST": "ST",
     "LS": "LS",
     "LW": "LW",
+    "0%": "0%",
+    "1%": "1%",
+    "2%": "2%",
+    "3%": "3%",
+    "4%": "4%",
+    "5%": "5%",
+    "6%": "6%",
+    "7%": "7%",
+    "8%": "8%",
+    "9%": "9%",
+    "10%": "10%",
+    "11%": "11%",
+    "12%": "12%",
+    "13%": "13%",
+    "14%": "14%",
+    "15%": "15%",
+    "16%": "16%",
+    "17%": "17%",
+    "18%": "18%",
+    "19%": "19%",
+    "20%": "20%",
+    "21%": "21%",
+    "22%": "22%",
+    "23%": "23%",
+    "24%": "24%",
+    "25%": "25%",
+    "26%": "26%",
+    "27%": "27%",
+    "28%": "28%",
+    "29%": "29%",
+    "30%": "30%",
+    "31%": "31%",
+    "32%": "32%",
+    "33%": "33%",
+    "34%": "34%",
+    "35%": "35%",
+    "36%": "36%",
+    "37%": "37%",
+    "38%": "38%",
+    "39%": "39%",
+    "40%": "40%",
+    "41%": "41%",
+    "42%": "42%",
+    "43%": "43%",
+    "44%": "44%",
+    "45%": "45%",
+    "46%": "46%",
+    "47%": "47%",
+    "48%": "48%",
+    "49%": "49%",
+    "50%": "50%",
+    "51%": "51%",
+    "52%": "52%",
+    "53%": "53%",
+    "54%": "54%",
+    "55%": "55%",
+    "56%": "56%",
+    "57%": "57%",
+    "58%": "58%",
+    "59%": "59%",
+    "60%": "60%",
+    "61%": "61%",
+    "62%": "62%",
+    "63%": "63%",
+    "64%": "64%",
+    "65%": "65%",
+    "66%": "66%",
+    "67%": "67%",
+    "68%": "68%",
+    "69%": "69%",
+    "70%": "70%",
+    "71%": "71%",
+    "72%": "72%",
+    "73%": "73%",
+    "74%": "74%",
+    "75%": "75%",
+    "76%": "76%",
+    "77%": "77%",
+    "78%": "78%",
+    "79%": "79%",
+    "80%": "80%",
+    "81%": "81%",
+    "82%": "82%",
+    "83%": "83%",
+    "84%": "84%",
+    "85%": "85%",
+    "86%": "86%",
+    "87%": "87%",
+    "88%": "88%",
+    "89%": "89%",
+    "90%": "90%",
+    "91%": "91%",
+    "92%": "92%",
+    "93%": "93%",
+    "94%": "94%",
+    "95%": "95%",
+    "96%": "96%",
+    "97%": "97%",
+    "98%": "98%",
+    "99%": "99%",
+    "100%": "100%",
     "Show_Console": "Show Console",
     "open_folder": "Open Folder",
     "open": "Open",
@@ -570,4 +711,5 @@
     "log_game_logs": "Intercept Game Logger",
     "log_luaL_tolstring": "Intercept luaL_tolstring",
     "format_test": "format test, n: {number}, s: {somestring}"
+
 }
