--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+v21.1.1.3:
+    -
+
+v21.1.1.2:
+    - Added to Players Editor:
+        - 120 new bodytypecodes to bodytype dropdown
+    - Added to Settings:
+        - Option to hide players potential in the tool UI
+    - Dropdown options available in players editor are now being loaded from data/IdMap.json
+    - Fixed crashing on loading player without club in players editor caused by missing kitnumber.
+    - Fixed crashing on opening players editor multiple times in various game modes.
+
 v21.1.1.1:
     - Added:
         - Permanently saving created player attributes in player career mode when edited via players editor
