--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 v21.1.1.3:
-    -
+    - Added to Settings:
+        - Option to change hotkeys
+    - Added to Players Editor:
+        - Randomize attributes
 
 v21.1.1.2:
     - Added to Players Editor:
