--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -17,6 +17,9 @@
     "Key_eject_dll": "END - Eject DLL",
     "title_label": "Title label",
     "show_title_label": "Show app title label",
+    "show_player_potential_short": "Show Player Potential",
+    "show_player_potential": "Show Player Potential in UI",
+    "exec_lua_all_states": "Execute In All In-Game Lua States",
     "show_hotkeys": "Show hotkeys",
     "show_fps": "Show FPS",
     "show_current_screen": "Show Screen ID",
@@ -24,6 +27,7 @@
     "top_right_corner": "Top-right corner",
     "bottom_left_corner": "Bottom-left corner",
     "bottom_right_corner": "Bottom-right corner",
+    "Other": "Other",
     "Menu": "Menu",
     "Console": "Console",
     "DB_Editor": "Database Editor",
@@ -552,135 +556,75 @@
     "form_good": "Good",
     "form_excellent": "Excellent",
     "NONE": "NONE",
-    "GK": "GK",
-    "SW": "SW",
-    "RWB": "RWB",
-    "RB": "RB",
-    "RCB": "RCB",
-    "CB": "CB",
-    "LCB": "LCB",
-    "LB": "LB",
-    "LWB": "LWB",
-    "RDM": "RDM",
-    "CDM": "CDM",
-    "LDM": "LDM",
-    "RM": "RM",
-    "RCM": "RCM",
-    "CM": "CM",
-    "LCM": "LCM",
-    "LM": "LM",
-    "RAM": "RAM",
-    "CAM": "CAM",
-    "LAM": "LAM",
-    "RF": "RF",
-    "CF": "CF",
-    "LF": "LF",
-    "RW": "RW",
-    "RS": "RS",
-    "ST": "ST",
-    "LS": "LS",
-    "LW": "LW",
-    "0%": "0%",
-    "1%": "1%",
-    "2%": "2%",
-    "3%": "3%",
-    "4%": "4%",
-    "5%": "5%",
-    "6%": "6%",
-    "7%": "7%",
-    "8%": "8%",
-    "9%": "9%",
-    "10%": "10%",
-    "11%": "11%",
-    "12%": "12%",
-    "13%": "13%",
-    "14%": "14%",
-    "15%": "15%",
-    "16%": "16%",
-    "17%": "17%",
-    "18%": "18%",
-    "19%": "19%",
-    "20%": "20%",
-    "21%": "21%",
-    "22%": "22%",
-    "23%": "23%",
-    "24%": "24%",
-    "25%": "25%",
-    "26%": "26%",
-    "27%": "27%",
-    "28%": "28%",
-    "29%": "29%",
-    "30%": "30%",
-    "31%": "31%",
-    "32%": "32%",
-    "33%": "33%",
-    "34%": "34%",
-    "35%": "35%",
-    "36%": "36%",
-    "37%": "37%",
-    "38%": "38%",
-    "39%": "39%",
-    "40%": "40%",
-    "41%": "41%",
-    "42%": "42%",
-    "43%": "43%",
-    "44%": "44%",
-    "45%": "45%",
-    "46%": "46%",
-    "47%": "47%",
-    "48%": "48%",
-    "49%": "49%",
-    "50%": "50%",
-    "51%": "51%",
-    "52%": "52%",
-    "53%": "53%",
-    "54%": "54%",
-    "55%": "55%",
-    "56%": "56%",
-    "57%": "57%",
-    "58%": "58%",
-    "59%": "59%",
-    "60%": "60%",
-    "61%": "61%",
-    "62%": "62%",
-    "63%": "63%",
-    "64%": "64%",
-    "65%": "65%",
-    "66%": "66%",
-    "67%": "67%",
-    "68%": "68%",
-    "69%": "69%",
-    "70%": "70%",
-    "71%": "71%",
-    "72%": "72%",
-    "73%": "73%",
-    "74%": "74%",
-    "75%": "75%",
-    "76%": "76%",
-    "77%": "77%",
-    "78%": "78%",
-    "79%": "79%",
-    "80%": "80%",
-    "81%": "81%",
-    "82%": "82%",
-    "83%": "83%",
-    "84%": "84%",
-    "85%": "85%",
-    "86%": "86%",
-    "87%": "87%",
-    "88%": "88%",
-    "89%": "89%",
-    "90%": "90%",
-    "91%": "91%",
-    "92%": "92%",
-    "93%": "93%",
-    "94%": "94%",
-    "95%": "95%",
-    "96%": "96%",
-    "97%": "97%",
-    "98%": "98%",
-    "99%": "99%",
-    "100%": "100%",
+    "pos_0_abbr": "GK",
+    "pos_1_abbr": "SW",
+    "pos_2_abbr": "RWB",
+    "pos_3_abbr": "RB",
+    "pos_4_abbr": "RCB",
+    "pos_5_abbr": "CB",
+    "pos_6_abbr": "LCB",
+    "pos_7_abbr": "LB",
+    "pos_8_abbr": "LWB",
+    "pos_9_abbr": "RDM",
+    "pos_10_abbr": "CDM",
+    "pos_11_abbr": "LDM",
+    "pos_12_abbr": "RM",
+    "pos_13_abbr": "RCM",
+    "pos_14_abbr": "CM",
+    "pos_15_abbr": "LCM",
+    "pos_16_abbr": "LM",
+    "pos_17_abbr": "RAM",
+    "pos_18_abbr": "CAM",
+    "pos_19_abbr": "LAM",
+    "pos_20_abbr": "RF",
+    "pos_21_abbr": "CF",
+    "pos_22_abbr": "LF",
+    "pos_23_abbr": "RW",
+    "pos_24_abbr": "RS",
+    "pos_25_abbr": "ST",
+    "pos_26_abbr": "LS",
+    "pos_27_abbr": "LW",
+    "player_role_0": "Unknown",
+    "player_role_1": "Crucial",
+    "player_role_2": "Important",
+    "player_role_3": "Rotation",
+    "player_role_4": "Sporadic",
+    "player_role_5": "Prospect",
+    "injurytype_1": "Pulled Calf",
+    "injurytype_2": "Pulled Quad",
+    "injurytype_3": "Pulled Hamstring",
+    "injurytype_4": "Pulled Groin",
+    "injurytype_5": "Pulled Hip Flexor",
+    "injurytype_6": "Torn Calf Muscle",
+    "injurytype_7": "Torn Quadricep Muscle",
+    "injurytype_8": "Torn Hamstring",
+    "injurytype_9": "Torn Groin",
+    "injurytype_10": "Torn Hip Flexor",
+    "injurytype_11": "Dead Leg Calf",
+    "injurytype_12": "Concussion",
+    "injurytype_13": "Head Cut",
+    "injurytype_14": "Dead Leg Quad",
+    "injurytype_15": "Broken Toe",
+    "injurytype_16": "Broken Metatarsal",
+    "injurytype_17": "Broken Ankle",
+    "injurytype_18": "Broken Tibia",
+    "injurytype_19": "Bruised Leg",
+    "injurytype_20": "Femur Contusion",
+    "injurytype_21": "Broken Rib",
+    "injurytype_22": "Bruised Rib",
+    "injurytype_23": "Bruised Tailbone",
+    "injurytype_24": "Broken Tailbone",
+    "injurytype_25": "Broken Collarbone",
+    "injurytype_26": "Broken Shoulder",
+    "injurytype_27": "Anterior Cruciate Ligament",
+    "injurytype_28": "Lateral Collateral Ligament",
+    "injurytype_29": "Medial Collateral Ligament",
+    "injurytype_30": "Sprained Knee",
+    "injurytype_31": "Hyper Extended Knee",
+    "injurytype_32": "Dislocated Shoulder",
+    "injurytype_33": "Broken Elbow",
+    "injurytype_34": "Bruised Elbow",
+    "injurytype_35": "Sprained Ankle",
     "Show_Console": "Show Console",
     "open_folder": "Open Folder",
     "open": "Open",
