--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,17 @@
+v21.1.1.4:
+    - Added 7 new lua function (Check DOC.MD for usage):
+        - IsPlayerTransferListed
+        - IsPlayerLoanListed
+        - AddPlayerToTransferList
+        - AddPlayerToLoanList
+        - RemovePlayerFromTransferList
+        - RemovePlayerFromLoanList
+        - RemovePlayerFromLists
+    - Added to Players Editor -> Transfer Panel:
+        - Option to add/remove player from transfer list
+        - Option to add/remove player from loan list
+    - Renamed Côte d'Ivoire to Ivory Coast
+
 v21.1.1.3:
     - Added to Settings:
         - Option to change hotkeys
