--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -101,6 +101,7 @@
     "movement_abbr": "MOV",
     "mentality_abbr": "MEN",
     "potential": "Potential",
+    "overallrating": "Overall Rating",
     "modifier": "Modifier",
     "crossing": "Crossing",
     "finishing": "Finishing",
@@ -272,6 +273,7 @@
     "internationalrep_desc": "International Reputation",
     "weakfootabilitytypecode_desc": "Weak Foot",
     "potential_desc": "Potential",
+    "overallrating_desc": "Overall Rating",
     "modifier_desc": "Modifier - Modifies player overall rating without editing attributes\ni.e if player real ovr is 80 and modifier is 2 then in game player ovr will be 82",
     "crossing_desc": "Crossing",
     "finishing_desc": "Finishing",
@@ -407,6 +409,7 @@
     "match_form_desc": "Player Match Form",
     "morale_desc": "Player Morale",
     "potential_abbr": "Potential",
+    "overallrating_abbr": "OVR",
     "modifier_abbr": "Modifier",
     "skillmoves_abbr": "Skill Moves",
     "skillmoveslikelihood_abbr": "SM Likelihood",
