--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -259,6 +259,8 @@
     "performancebonuscount": "Performance Bonus Count",
     "performancebonuscountachieved": "Performance Bonus Count Achieved",
     "release_clause": "Release Clause",
+    "is_transfer_listed": "Is Tranfer Listed?",
+    "is_loan_listed": "Is Loan Listed?",
     "fm_fitness": "Fitness",
     "fm_isinjured": "Is Injured?",
     "fm_injurytype": "Injury",
@@ -399,6 +401,8 @@
     "performancebonuscount_desc": "Performance Bonus Count",
     "performancebonuscountachieved_desc": "Performance Bonus Count Achieved",
     "release_clause_desc": "Player Release Clause.\n\n0 = No clause",
+    "is_transfer_listed_desc": "Player is on Tranfer List?",
+    "is_loan_listed_desc": "Player is on Loan List?",
     "fm_fitness_desc": "Player match fitness/durability. Call it as you want.\n\nBasically, it's the stamina bar that you see in bottom left/right corner in game",
     "fm_isinjured_desc": "Player Is Injured?",
     "fm_injurytype_desc": "Player Injury Name",
@@ -540,6 +544,8 @@
     "performancebonuscountachieved_abbr": "Bonus Count Achieved",
     "release_clause_abbr": "Release Clause",
     "fm_fitness_abbr": "Fitness",
+    "is_transfer_listed_abbr": "Is Tranfer Listed?",
+    "is_loan_listed_abbr": "Is Loan Listed?",
     "fm_isinjured_abbr": "Is Injured?",
     "fm_injurytype_abbr": "Injury",
     "fm_fullfit_y_abbr": "Full fit year",
