--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+v21.1.1.5:
+    - Fixed game crashing on starting the match (probably :D)
+    - Added 6 new lua function (Check DOC.MD for usage):
+        - TransferPlayer
+        - ReleasePlayerFromTeam
+        - SetPlayerSharpness
+        - SetPlayerMorale
+        - SetPlayerForm
+        - SetPlayerFitness
+
 v21.1.1.4:
     - Added 7 new lua function (Check DOC.MD for usage):
         - IsPlayerTransferListed
