--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+v21.1.1.8:
+    - Added basic teams editor
+    - Added following buttons to players editor:
+        - Transfer Player
+        - Loan Player
+        - Terminate Loan
+        - Delete presigned contract
+        - Open Club in Teams Editor
+    - Collecting in-game lua states is now disabled by default.
+
 v21.1.1.7:
     - Fixed LoanPlayer
     - Fixed crashing after executing GetTeamName/GetPlayerName in career mode.
@@ -33,7 +43,7 @@ v21.1.1.4:
     - Added to Players Editor -> Transfer Panel:
         - Option to add/remove player from transfer list
         - Option to add/remove player from loan list
-    - Renamed Côte d'Ivoire to Ivory Coast
+    - Renamed CÃ´te d'Ivoire to Ivory Coast
 
 v21.1.1.3:
     - Added to Settings:
