--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -19,6 +19,7 @@
     "show_title_label": "Show app title label",
     "show_player_potential_short": "Show Player Potential",
     "show_player_potential": "Show Player Potential in UI",
+    "collect_lua_states": "Enable collecting lua states",
     "exec_lua_all_states": "Execute In All In-Game Lua States",
     "show_hotkeys": "Show hotkeys",
     "show_fps": "Show FPS",
@@ -34,6 +35,11 @@
     "LUA_Engine": "LUA Engine",
     "File_Browser": "File Browser",
     "players_editor": "Players Editor",
+    "teams_editor": "Teams Editor",
+    "transfer_player": "Transfer Player",
+    "loan_player": "Loan Player",
+    "editors": "Editors",
+    "miscellaneous": "Miscellaneous",
     "unknown_1": "Unknown (1)",
     "unknown_2": "Unknown (2)",
     "unknown_3": "Unknown (3)",
@@ -270,6 +276,33 @@
     "sharpness": "Sharpness",
     "match_form": "Form",
     "morale": "Morale",
+    "team_color_1": "Color 1",
+    "team_color_2": "Color 2",
+    "team_color_3": "Color 3",
+    "foundationyear": "Foundation Year",
+    "leaguetitles": "League Titles",
+    "domesticcups": "Domestic Cups",
+    "uefa_consecutive_wins": "UEFA Consecutive Wins",
+    "uefa_cl_wins": "Champions League Wins",
+    "uefa_el_wins": "Europa League Wins",
+    "prev_el_champ": "Previous Europa League Champion",
+    "clubworth": "Club Worth",
+    "transferbudget": "Transfer Budget",
+    "rivalteam": "Rival Team",
+    "youthdevelopment": "Youth Development",
+    "profitability": "Profitability",
+    "popularity": "Popularity",
+    "internationalprestige": "International Prestige",
+    "domesticprestige": "Domestic Prestige",
+    "teamcolor1r": "Team Color 1 Red",
+    "teamcolor1g": "Team Color 1 Green",
+    "teamcolor1b": "Team Color 1 Blue",
+    "teamcolor2r": "Team Color 2 Red",
+    "teamcolor2g": "Team Color 2 Green",
+    "teamcolor2b": "Team Color 2 Blue",
+    "teamcolor3r": "Team Color 3 Red",
+    "teamcolor3g": "Team Color 3 Green",
+    "teamcolor3b": "Team Color 3 Blue",
     "skillmoves_desc": "Skill Moves",
     "skillmoveslikelihood_desc": "Skill Moves Likelihood",
     "internationalrep_desc": "International Reputation",
@@ -412,6 +445,21 @@
     "sharpness_desc": "Player Match Sharpness",
     "match_form_desc": "Player Match Form",
     "morale_desc": "Player Morale",
+    "foundationyear_desc": "Foundation Year",
+    "leaguetitles_desc": "League Titles",
+    "domesticcups_desc": "Domestic Cups",
+    "uefa_consecutive_wins_desc": "UEFA Consecutive Wins",
+    "uefa_cl_wins_desc": "Champions League Wins",
+    "uefa_el_wins_desc": "Europa League Wins",
+    "prev_el_champ_desc": "Previous Europa League Champion",
+    "clubworth_desc": "Club Worth",
+    "transferbudget_desc": "Transfer Budget",
+    "rivalteam_desc": "Rival Team",
+    "youthdevelopment_desc": "Youth Development",
+    "profitability_desc": "Profitability",
+    "popularity_desc": "Popularity",
+    "internationalprestige_desc": "International Prestige",
+    "domesticprestige_desc": "Domestic Prestige",
     "potential_abbr": "Potential",
     "overallrating_abbr": "OVR",
     "modifier_abbr": "Modifier",
@@ -634,6 +682,21 @@
     "injurytype_33": "Broken Elbow",
     "injurytype_34": "Bruised Elbow",
     "injurytype_35": "Sprained Ankle",
+    "foundationyear_abbr": "Foundation Year",
+    "leaguetitles_abbr": "League Titles",
+    "domesticcups_abbr": "Domestic Cups",
+    "uefa_consecutive_wins_abbr": "UEFA Consec. Wins",
+    "uefa_cl_wins_abbr": "CL Wins",
+    "uefa_el_wins_abbr": "EL Wins",
+    "prev_el_champ_abbr": "Prev. EL Champ",
+    "clubworth_abbr": "Club Worth",
+    "transferbudget_abbr": "Transfer Budget",
+    "rivalteam_abbr": "Rival",
+    "youthdevelopment_abbr": "Youth Dev.",
+    "profitability_abbr": "Profitability",
+    "popularity_abbr": "Popularity",
+    "internationalprestige_abbr": "Int. Prestige",
+    "domesticprestige_abbr": "Domestic Prestige",
     "Show_Console": "Show Console",
     "open_folder": "Open Folder",
     "open": "Open",
