--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v21.1.2.0:
+    -
+
 v21.1.1.9:
     - Faster loading teams & players
     - Faster filtering
@@ -47,7 +50,7 @@ v21.1.1.4:
     - Added to Players Editor -> Transfer Panel:
         - Option to add/remove player from transfer list
         - Option to add/remove player from loan list
-    - Renamed CÃ´te d'Ivoire to Ivory Coast
+    - Renamed Côte d'Ivoire to Ivory Coast
 
 v21.1.1.3:
     - Added to Settings:
