--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 v21.1.2.0:
-    -
+    - Fixed "transfer will reduce the number of players below 18" even if team had enough players
+    - Fixed player "Team not found" if the team were loaded before player
 
 v21.1.1.9:
     - Faster loading teams & players
@@ -50,7 +51,7 @@ v21.1.1.4:
     - Added to Players Editor -> Transfer Panel:
         - Option to add/remove player from transfer list
         - Option to add/remove player from loan list
-    - Renamed Côte d'Ivoire to Ivory Coast
+    - Renamed CÃ´te d'Ivoire to Ivory Coast
 
 v21.1.1.3:
     - Added to Settings:
