--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -1432,8 +1432,8 @@
     "FATAL": "FATAL",
     "Logger": "Logger",
     "log_level": "Log Level",
-    "log_get_file_info": "Log GetFileInfo",
-    "log_load_file": "Log LoadFile",
+    "log_try_find_chunk_file": "Log Try Find Chunk File",
+    "log_load_chunk_file": "Log Load Chunk File",
     "log_iniread": "Log Ini Read",
     "log_game_logs": "Intercept Game Logger",
     "log_luaL_tolstring": "Intercept luaL_tolstring",
